# nav1-watcher

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  show.rs  watcher.rs  webhook.rs
