[package]
name = "nav1-truenas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
directories = "5.0.1"
metadata = "0.1.8"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
